First commited as before_45220_rev2