@@ -24,6 +24,7 @@ import java.text.DateFormat;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Calendar;
+import java.util.Comparator;
 import java.util.Date;
 import java.util.Iterator;
 import java.util.LinkedList;
@@ -61,8 +62,10 @@ import org.eclipse.jface.viewers.ColumnWeightData;
 import org.eclipse.jface.viewers.ComboBoxCellEditor;
 import org.eclipse.jface.viewers.ICellModifier;
 import org.eclipse.jface.viewers.ISelection;
+import org.eclipse.jface.viewers.ISelectionChangedListener;
 import org.eclipse.jface.viewers.IStructuredSelection;
 import org.eclipse.jface.viewers.ITreeContentProvider;
+import org.eclipse.jface.viewers.SelectionChangedEvent;
 import org.eclipse.jface.viewers.StructuredSelection;
 import org.eclipse.jface.viewers.StyledCellLabelProvider;
 import org.eclipse.jface.viewers.StyledString;
@@ -81,6 +84,10 @@ import org.eclipse.swt.dnd.DragSourceEvent;
 import org.eclipse.swt.dnd.DragSourceListener;
 import org.eclipse.swt.dnd.Transfer;
 import org.eclipse.swt.dnd.TransferData;
+import org.eclipse.swt.events.MenuDetectEvent;
+import org.eclipse.swt.events.MenuDetectListener;
+import org.eclipse.swt.events.ModifyEvent;
+import org.eclipse.swt.events.ModifyListener;
 import org.eclipse.swt.events.MouseEvent;
 import org.eclipse.swt.events.MouseListener;
 import org.eclipse.swt.events.SelectionAdapter;
@@ -202,7 +209,7 @@ public class ResourceFilterGroup {
 
 	/**
 	 * Set the IContainer resource to edit
-	 *
+	 * 
 	 * @param res
 	 *            the container resource
 	 */
@@ -301,17 +308,14 @@ public class ResourceFilterGroup {
 			changed = true;
 		}
 
-		@Override
 		public int getChildrenLimit() {
 			return Integer.MAX_VALUE;
 		}
 
-		@Override
 		protected void argumentsChanged() {
 			changed = true;
 		}
 
-		@Override
 		public boolean hasChanged() {
 			if (changed)
 				return true;
@@ -336,7 +340,6 @@ public class ResourceFilterGroup {
 			return false;
 		}
 
-		@Override
 		public void removeAll() {
 			if (children.size() > 0) {
 				super.removeAll();
@@ -350,8 +353,7 @@ public class ResourceFilterGroup {
 	static String excludeAllGroup = "EXCLUDE_ALL_GROUP";  //$NON-NLS-1$
 
 	class TreeContentProvider implements ITreeContentProvider {
-
-		@Override
+		
 		public Object[] getChildren(Object parentElement) {
 			if (parentElement == filters) {
 				if (filters.getChildren().length > 0)
@@ -374,7 +376,6 @@ public class ResourceFilterGroup {
 			return null;
 		}
 
-		@Override
 		public Object getParent(Object element) {
 			if (element instanceof String)
 				return filters;
@@ -387,7 +388,6 @@ public class ResourceFilterGroup {
 			return null;
 		}
 
-		@Override
 		public boolean hasChildren(Object element) {
 			if (element instanceof FilterCopy || element instanceof String) {
 				Object[] children = getChildren(element);
@@ -396,16 +396,13 @@ public class ResourceFilterGroup {
 			return false;
 		}
 
-		@Override
 		public Object[] getElements(Object inputElement) {
 			return getChildren(inputElement);
 		}
 
-		@Override
 		public void dispose() {
 		}
 
-		@Override
 		public void inputChanged(Viewer viewer, Object oldInput, Object newInput) {
 		}
 	}
@@ -419,13 +416,11 @@ public class ResourceFilterGroup {
 		public LabelProvider() {
 			util = new FilterTypeUtil();
 			fBoldStyler= new Styler() {
-				@Override
 				public void applyStyles(TextStyle textStyle) {
 					textStyle.font= boldFont;
 				}
 			};
 			fPlainStyler= new Styler() {
-				@Override
 				public void applyStyles(TextStyle textStyle) {
 					textStyle.font= plainFont;
 				}
@@ -452,7 +447,6 @@ public class ResourceFilterGroup {
 			return copy.isUnderAGroupFilter();
 		}
 
-		@Override
 		public void update(ViewerCell cell) {
 			int columnIndex = cell.getColumnIndex();
 			String column = getColumnID(columnIndex);
@@ -478,14 +472,14 @@ public class ResourceFilterGroup {
 			}
 			else {
 				filter = (FilterCopy) element;
-
+	
 				if (column.equals(FilterTypeUtil.MODE)) {
 					StyledString styledString = getStyleColumnText(filter);
 					if (!isPartialFilter(filter)) {
 						Object isInheritable = FilterTypeUtil.getValue(filter, FilterTypeUtil.INHERITABLE);
 						if (((Boolean)isInheritable).booleanValue())
 							styledString.append("   " + IDEWorkbenchMessages.ResourceFilterPage_recursive); //$NON-NLS-1$
-
+						
 					}
 					cell.setText(styledString.toString());
 					cell.setStyleRanges(styledString.getStyleRanges());
@@ -501,7 +495,7 @@ public class ResourceFilterGroup {
 
 			super.update(cell);
 		}
-
+		
 		private StyledString getStyleColumnText(FilterCopy filter) {
 			if ((filter.getChildrenLimit() > 0)) {
 				String whiteSpace = " "; //$NON-NLS-1$;
@@ -534,7 +528,6 @@ public class ResourceFilterGroup {
 			return ui.formatStyledText(filter, fPlainStyler, fBoldStyler);
 		}
 
-		@Override
 		protected void measure(Event event, Object element) {
 			super.measure(event, element);
 		}
@@ -547,9 +540,8 @@ public class ResourceFilterGroup {
 			return ""; //$NON-NLS-1$
 		}
 	}
-
+	
 	class CellModifier implements ICellModifier {
-		@Override
 		public boolean canModify(Object element, String property) {
 			FilterCopy filter = (FilterCopy) element;
 			if (property.equals(FilterTypeUtil.ARGUMENTS)
@@ -558,13 +550,11 @@ public class ResourceFilterGroup {
 			return true;
 		}
 
-		@Override
 		public Object getValue(Object element, String property) {
 			FilterCopy filter = (FilterCopy) element;
 			return FilterTypeUtil.getValue(filter, property);
 		}
 
-		@Override
 		public void modify(Object element, String property, Object value) {
 			FilterCopy filter = (FilterCopy) ((TableItem) element).getData();
 			FilterTypeUtil.setValue(filter, property, value);
@@ -575,7 +565,7 @@ public class ResourceFilterGroup {
 	/**
 	 * Creates the widget group. Callers must call <code>dispose</code> when the
 	 * group is no longer needed.
-	 *
+	 * 
 	 * @param parent
 	 *            the widget parent
 	 * @return container of the widgets
@@ -617,7 +607,7 @@ public class ResourceFilterGroup {
 		data.horizontalSpan = 2;
 		label.setLayoutData(data);
 		label.setFont(font);
-
+		
 		createViewerGroup(composite);
 		createButtonGroup(composite);
 
@@ -650,7 +640,11 @@ public class ResourceFilterGroup {
 		filterView.setInput(filters);
 		filterView.getTree().setFont(parent.getFont());
 
-		filterView.addSelectionChangedListener(event -> refreshEnablement());
+		filterView.addSelectionChangedListener(new ISelectionChangedListener() {
+			public void selectionChanged(SelectionChangedEvent event) {
+				refreshEnablement();
+			}
+		});
 
 		TreeColumn modeColumn = new TreeColumn(filterView.getTree(), 0);
 		modeColumn
@@ -683,7 +677,6 @@ public class ResourceFilterGroup {
 		}
 
 		filterView.getTree().addMouseListener(new MouseListener() {
-			@Override
 			public void mouseDoubleClick(MouseEvent e) {
 				if (!handleEdit()) {
 					ISelection selection = filterView.getSelection();
@@ -696,11 +689,9 @@ public class ResourceFilterGroup {
 				}
 			}
 
-			@Override
 			public void mouseDown(MouseEvent e) {
 			}
 
-			@Override
 			public void mouseUp(MouseEvent e) {
 			}
 		});
@@ -711,15 +702,17 @@ public class ResourceFilterGroup {
 		filterView.addDropSupport(ops, transfers,
 				new FilterCopyDrop(filterView));
 
-		filterView.getTree().addMenuDetectListener(e -> {
-			MenuManager mgr = new MenuManager();
-			mgr.add(addSubFilterAction);
-			mgr.add(addSubGroupFilterAction);
-			mgr.add(new Separator());
-			mgr.add(new EditFilterAction());
-			mgr.add(new RemoveFilterAction());
-			filterView.getControl().setMenu(
-					mgr.createContextMenu(filterView.getControl()));
+		filterView.getTree().addMenuDetectListener(new MenuDetectListener() {
+			public void menuDetected(MenuDetectEvent e) {
+				MenuManager mgr = new MenuManager();
+				mgr.add(addSubFilterAction);
+				mgr.add(addSubGroupFilterAction);
+				mgr.add(new Separator());
+				mgr.add(new EditFilterAction());
+				mgr.add(new RemoveFilterAction());
+				filterView.getControl().setMenu(
+						mgr.createContextMenu(filterView.getControl()));
+			}
 		});
 		TreeColumnLayout layout = new TreeColumnLayout();
 		tableComposite.setLayout( layout );
@@ -745,11 +738,9 @@ public class ResourceFilterGroup {
 							null));
 		}
 
-		@Override
 		public void run() {
 			handleEdit();
 		}
-		@Override
 		public boolean isEnabled() {
 			ISelection selection = filterView.getSelection();
 			if (selection instanceof IStructuredSelection) {
@@ -771,11 +762,9 @@ public class ResourceFilterGroup {
 							null));
 		}
 
-		@Override
 		public void run() {
 			handleRemove();
 		}
-		@Override
 		public boolean isEnabled() {
 			ISelection selection = filterView.getSelection();
 			if (selection instanceof IStructuredSelection) {
@@ -789,7 +778,7 @@ public class ResourceFilterGroup {
 	class AddSubFilterAction extends Action {
 
 		boolean createGroupOnly;
-
+		
 		public AddSubFilterAction(boolean createGroupOnly) {
 			this.createGroupOnly = createGroupOnly;
 			setText(NLS
@@ -799,7 +788,11 @@ public class ResourceFilterGroup {
 							null));
 		}
 
-		@Override
+		/*
+		 * (non-Javadoc)
+		 * 
+		 * @see org.eclipse.jface.action.Action#run()
+		 */
 		public void run() {
 			ISelection selection = filterView.getSelection();
 			if (selection instanceof IStructuredSelection) {
@@ -809,7 +802,11 @@ public class ResourceFilterGroup {
 			}
 		}
 
-		@Override
+		/*
+		 * (non-Javadoc)
+		 * 
+		 * @see org.eclipse.jface.action.Action#isEnabled()
+		 */
 		public boolean isEnabled() {
 			ISelection selection = filterView.getSelection();
 			if (selection instanceof IStructuredSelection) {
@@ -830,7 +827,7 @@ public class ResourceFilterGroup {
 		}
 		handleAdd(selectedObject, createGroupOnly);
 	}
-
+	
 	private void handleAdd(Object selection, boolean createGroupOnly) {
 		if (selection == null) {
 			FilterCopy newFilter = new FilterCopy();
@@ -910,7 +907,13 @@ public class ResourceFilterGroup {
 			super(viewer);
 		}
 
-		@Override
+		/*
+		 * (non-Javadoc)
+		 * 
+		 * @see
+		 * org.eclipse.jface.viewers.ViewerDropAdapter#performDrop(java.lang
+		 * .Object)
+		 */
 		public boolean performDrop(Object data) {
 			Object target = getCurrentTarget();
 			if (target == null)
@@ -940,7 +943,13 @@ public class ResourceFilterGroup {
 			return true;
 		}
 
-		@Override
+		/*
+		 * (non-Javadoc)
+		 * 
+		 * @see
+		 * org.eclipse.jface.viewers.ViewerDropAdapter#validateDrop(java.lang
+		 * .Object, int, org.eclipse.swt.dnd.TransferData)
+		 */
 		public boolean validateDrop(Object target, int operation,
 				TransferData transferType) {
 			if (filterCopyTransfer.isSupportedType(transferType)) {
@@ -954,21 +963,39 @@ public class ResourceFilterGroup {
 
 	class FilterCopyDrag implements DragSourceListener {
 
-		@Override
+		/*
+		 * (non-Javadoc)
+		 * 
+		 * @see
+		 * org.eclipse.swt.dnd.DragSourceListener#dragFinished(org.eclipse.swt
+		 * .dnd.DragSourceEvent)
+		 */
 		public void dragFinished(DragSourceEvent event) {
 			if (event.detail == DND.DROP_MOVE) {
 				// nothing
 			}
 		}
 
-		@Override
+		/*
+		 * (non-Javadoc)
+		 * 
+		 * @see
+		 * org.eclipse.swt.dnd.DragSourceListener#dragSetData(org.eclipse.swt
+		 * .dnd.DragSourceEvent)
+		 */
 		public void dragSetData(DragSourceEvent event) {
 			if (filterCopyTransfer.isSupportedType(event.dataType)) {
 				event.data = getFilterCopySelection();
 			}
 		}
 
-		@Override
+		/*
+		 * (non-Javadoc)
+		 * 
+		 * @see
+		 * org.eclipse.swt.dnd.DragSourceListener#dragStart(org.eclipse.swt.
+		 * dnd.DragSourceEvent)
+		 */
 		public void dragStart(DragSourceEvent event) {
 			if (getFilterCopySelection().length == 0)
 				event.doit = false;
@@ -993,12 +1020,11 @@ public class ResourceFilterGroup {
 		addButton.setLayoutData(data);
 		setButtonDimensionHint(addButton);
 		addButton.addSelectionListener(new SelectionAdapter() {
-			@Override
 			public void widgetSelected(SelectionEvent e) {
 				handleAdd(false);
 			}
 		});
-
+		
 		addGroupButton = new Button(composite, SWT.PUSH);
 		addGroupButton.setText(NLS.bind(
 				IDEWorkbenchMessages.ResourceFilterPage_addGroupButtonLabel, null));
@@ -1006,12 +1032,11 @@ public class ResourceFilterGroup {
 		addGroupButton.setLayoutData(data);
 		setButtonDimensionHint(addGroupButton);
 		addGroupButton.addSelectionListener(new SelectionAdapter() {
-			@Override
 			public void widgetSelected(SelectionEvent e) {
 				handleAdd(true);
 			}
 		});
-
+		
 
 		editButton = new Button(composite, SWT.PUSH);
 		editButton.setText(NLS.bind(
@@ -1020,7 +1045,6 @@ public class ResourceFilterGroup {
 		editButton.setLayoutData(data);
 		setButtonDimensionHint(editButton);
 		editButton.addSelectionListener(new SelectionAdapter() {
-			@Override
 			public void widgetSelected(SelectionEvent e) {
 				handleEdit();
 			}
@@ -1036,7 +1060,6 @@ public class ResourceFilterGroup {
 		removeButton.setLayoutData(data);
 		setButtonDimensionHint(removeButton);
 		removeButton.addSelectionListener(new SelectionAdapter() {
-			@Override
 			public void widgetSelected(SelectionEvent e) {
 				handleRemove();
 			}
@@ -1206,7 +1229,7 @@ public class ResourceFilterGroup {
 
 	/**
 	 * Apply the read only state and the encoding to the resource.
-	 *
+	 * 
 	 * @return true if the filters changed
 	 */
 	public boolean performOk() {
@@ -1274,7 +1297,6 @@ public class ResourceFilterGroup {
 		private FilterCopyTransfer() {
 		}
 
-		@Override
 		public void javaToNative(Object object, TransferData transferData) {
 			if (object == null || !(object instanceof FilterCopy[]))
 				return;
@@ -1294,7 +1316,6 @@ public class ResourceFilterGroup {
 			}
 		}
 
-		@Override
 		public Object nativeToJava(TransferData transferData) {
 			if (isSupportedType(transferData)) {
 				byte[] buffer = (byte[]) super.nativeToJava(transferData);
@@ -1329,12 +1350,10 @@ public class ResourceFilterGroup {
 		private final String MYTYPENAME = "org.eclipse.ui.ide.internal.filterCopy"; //$NON-NLS-1$
 		private final int MYTYPEID = registerType(MYTYPENAME);
 
-		@Override
 		protected String[] getTypeNames() {
 			return new String[] { MYTYPENAME };
 		}
 
-		@Override
 		protected int[] getTypeIds() {
 			return new int[] { MYTYPEID };
 		}
@@ -1444,7 +1463,7 @@ class FilterTypeUtil {
 				return new Integer(1);
 		}
 		if (property.equals(INHERITABLE))
-			return Boolean.valueOf(
+			return new Boolean(
 					(filter.getType() & IResourceFilterDescription.INHERITABLE) != 0);
 
 		if (property.equals(ARGUMENTS))
@@ -1487,12 +1506,14 @@ class FilterTypeUtil {
 	 * @param descriptors
 	 */
 	private static void sortDescriptors(IFilterMatcherDescriptor[] descriptors) {
-		Arrays.sort(descriptors, (arg0, arg1) -> {
-			if (((IFilterMatcherDescriptor) arg0).getId().equals(FileInfoAttributesMatcher.ID))
-				return -1;
-			if (((IFilterMatcherDescriptor) arg1).getId().equals(FileInfoAttributesMatcher.ID))
-				return 1;
-			return ((IFilterMatcherDescriptor) arg0).getId().compareTo(((IFilterMatcherDescriptor) arg1).getId());
+		Arrays.sort(descriptors, new Comparator() {
+			public int compare(Object arg0, Object arg1) {
+				if (((IFilterMatcherDescriptor) arg0).getId().equals(FileInfoAttributesMatcher.ID))
+					return -1;
+				if (((IFilterMatcherDescriptor) arg1).getId().equals(FileInfoAttributesMatcher.ID))
+					return 1;
+				return ((IFilterMatcherDescriptor) arg0).getId().compareTo(((IFilterMatcherDescriptor) arg1).getId());
+			}
 		});
 	}
 
@@ -1664,17 +1685,14 @@ class FilterCopy extends UIResourceFilterDescription {
 		return id;
 	}
 
-	@Override
 	public IPath getPath() {
 		return path;
 	}
 
-	@Override
 	public IProject getProject() {
 		return project;
 	}
 
-	@Override
 	public int getType() {
 		return type;
 	}
@@ -1721,7 +1739,6 @@ class FilterCopy extends UIResourceFilterDescription {
 		return 0;
 	}
 
-	@Override
 	public boolean equals(Object o) {
 		if (!(o instanceof FilterCopy))
 			return false;
@@ -1826,10 +1843,12 @@ class FilterCopy extends UIResourceFilterDescription {
 		return false;
 	}
 
-	@Override
+	/* (non-Javadoc)
+	 * @see org.eclipse.core.resources.IResourceFilterDescription#getFileInfoMatcherDescription()
+	 */
 	public FileInfoMatcherDescription getFileInfoMatcherDescription() {
-
-
+		
+		
 		Object arg = FilterCopy.this.getArguments();
 		if (arg instanceof FilterCopy []) {
 			FilterCopy [] filterCopies = (FilterCopy []) arg;
@@ -1838,7 +1857,7 @@ class FilterCopy extends UIResourceFilterDescription {
 				descriptions[i] = filterCopies[i].getFileInfoMatcherDescription();
 			arg = descriptions;
 		}
-
+		
 		FileInfoMatcherDescription desc = new FileInfoMatcherDescription(getId(), arg);
 		return desc;
 	}
@@ -1865,17 +1884,11 @@ class FilterEditDialog extends TrayDialog {
 
 	TreeMap/*<String, ICustomFilterArgumentUI */ customfilterArgumentMap = new TreeMap();
 	ICustomFilterArgumentUI currentCustomFilterArgumentUI = new ICustomFilterArgumentUI() {
-		@Override
 		public Object getID() {return "dummy";} //$NON-NLS-1$
-		@Override
 		public void create(Composite argumentComposite, Font font) {}
-		@Override
 		public void dispose() {}
-		@Override
 		public void selectionChanged() {}
-		@Override
 		public String validate() {return null;}
-		@Override
 		public StyledString formatStyledText(FilterCopy filter,
 				Styler fPlainStyler, Styler fBoldStyler) {return null;}
 	};
@@ -1903,7 +1916,13 @@ class FilterEditDialog extends TrayDialog {
 		customfilterArgumentMap.put(ui.getID(), ui);
 	}
 
-	@Override
+	/*
+	 * (non-Javadoc)
+	 * 
+	 * @see
+	 * org.eclipse.jface.dialogs.Dialog#createDialogArea(org.eclipse.swt.widgets
+	 * .Composite)
+	 */
 	protected Control createDialogArea(Composite parent) {
 		GridData data = new GridData(SWT.FILL, SWT.FILL, true, true);
 		parent.setLayoutData(data);
@@ -1942,7 +1961,7 @@ class FilterEditDialog extends TrayDialog {
 			createModeArea(font, topComposite);
 
 			createTargetArea(font, topComposite);
-
+			
 			createIdArea(font, topComposite);
 		}
 		else {
@@ -1952,7 +1971,9 @@ class FilterEditDialog extends TrayDialog {
 		return composite;
 	}
 
-	@Override
+	/* (non-Javadoc)
+	 * @see org.eclipse.jface.dialogs.TrayDialog#createButtonBar(org.eclipse.swt.widgets.Composite)
+	 */
 	protected Control createButtonBar(Composite parent) {
 		Label label = new Label(parent, SWT.SEPARATOR | SWT.HORIZONTAL);
 		label.setLayoutData(new GridData(SWT.FILL, SWT.TOP, true, false));
@@ -1971,7 +1992,7 @@ class FilterEditDialog extends TrayDialog {
         	Control helpControl = createHelpControl(composite);
         	((GridData) helpControl.getLayoutData()).horizontalIndent = convertHorizontalDLUsToPixels(IDialogConstants.HORIZONTAL_MARGIN);
 		}
-
+       
         Control buttonSection = dialogCreateButtonBar(composite);
         ((GridData) buttonSection.getLayoutData()).grabExcessHorizontalSpace = true;
         return composite;
@@ -1993,7 +2014,7 @@ class FilterEditDialog extends TrayDialog {
 				| GridData.VERTICAL_ALIGN_CENTER);
 		composite.setLayoutData(data);
 		composite.setFont(parent.getFont());
-
+		
 		// Add the buttons to the button bar.
 		createButtonsForButtonBar(composite);
 		return composite;
@@ -2020,7 +2041,7 @@ class FilterEditDialog extends TrayDialog {
 		inherited = new Button(inheritableComposite, SWT.CHECK);
 		String label;
 		label = IDEWorkbenchMessages.ResourceFilterPage_applyRecursivelyToFolderStructure;
-
+		
 		inherited
 				.setText(NLS
 						.bind(
@@ -2031,10 +2052,9 @@ class FilterEditDialog extends TrayDialog {
 		inherited.setLayoutData(data);
 		inherited.setFont(font);
 		inherited.addSelectionListener(new SelectionAdapter() {
-			@Override
 			public void widgetSelected(SelectionEvent e) {
 				FilterTypeUtil.setValue(filter, FilterTypeUtil.INHERITABLE,
-						Boolean.valueOf(inherited.getSelection()));
+						new Boolean(inherited.getSelection()));
 			}
 		});
 		inherited.setSelection((((Boolean) FilterTypeUtil.getValue(filter,
@@ -2053,7 +2073,6 @@ class FilterEditDialog extends TrayDialog {
 		includeButton.setLayoutData(data);
 		includeButton.setFont(font);
 		includeButton.addSelectionListener(new SelectionAdapter() {
-			@Override
 			public void widgetSelected(SelectionEvent e) {
 				FilterTypeUtil.setValue(filter, FilterTypeUtil.MODE,
 						new Integer(0));
@@ -2067,7 +2086,6 @@ class FilterEditDialog extends TrayDialog {
 		excludeButton.setLayoutData(data);
 		excludeButton.setFont(font);
 		excludeButton.addSelectionListener(new SelectionAdapter() {
-			@Override
 			public void widgetSelected(SelectionEvent e) {
 				FilterTypeUtil.setValue(filter, FilterTypeUtil.MODE,
 						new Integer(1));
@@ -2119,7 +2137,6 @@ class FilterEditDialog extends TrayDialog {
 		idCombo.setLayoutData(data);
 		idCombo.setFont(font);
 		idCombo.addSelectionListener(new SelectionAdapter() {
-			@Override
 			public void widgetSelected(SelectionEvent e) {
 				FilterTypeUtil.setValue(filter, FilterTypeUtil.ID, idCombo
 						.getItem(idCombo.getSelectionIndex()));
@@ -2141,7 +2158,7 @@ class FilterEditDialog extends TrayDialog {
 		FilterTypeUtil.setValue(filter, FilterTypeUtil.ID, idCombo
 				.getItem(idCombo.getSelectionIndex()));
 	}
-
+	
 
 	ICustomFilterArgumentUI getUI(String descriptorID) {
 		ICustomFilterArgumentUI result = (ICustomFilterArgumentUI) customfilterArgumentMap.get(descriptorID);
@@ -2149,7 +2166,7 @@ class FilterEditDialog extends TrayDialog {
 			return result = (ICustomFilterArgumentUI) customfilterArgumentMap.get(new String()); // default ui
 		return result;
 	}
-
+	
 	private void setupPatternLine() {
 		IFilterMatcherDescriptor descriptor;
 		if (createGroupOnly) {
@@ -2168,7 +2185,7 @@ class FilterEditDialog extends TrayDialog {
 	}
 
 	/**
-	 *
+	 * 
 	 */
 	private void selectComboItem(String filterID) {
 		IFilterMatcherDescriptor descriptor = ResourcesPlugin.getWorkspace()
@@ -2221,7 +2238,7 @@ class FilterEditDialog extends TrayDialog {
 		GridData data;
 		Composite targetComposite = createGroup(font, composite,
 				NLS.bind(IDEWorkbenchMessages.ResourceFilterPage_columnFilterTarget, null), false, true, 1);
-
+		
 		String[] targets = FilterTypeUtil.getTargets();
 		filesButton = new Button(targetComposite, SWT.RADIO);
 		filesButton.setText(targets[0]);
@@ -2242,21 +2259,18 @@ class FilterEditDialog extends TrayDialog {
 		filesAndFoldersButton.setFont(font);
 
 		filesButton.addSelectionListener(new SelectionAdapter() {
-			@Override
 			public void widgetSelected(SelectionEvent e) {
 				FilterTypeUtil.setValue(filter, FilterTypeUtil.TARGET,
 						new Integer(0));
 			}
 		});
 		foldersButton.addSelectionListener(new SelectionAdapter() {
-			@Override
 			public void widgetSelected(SelectionEvent e) {
 				FilterTypeUtil.setValue(filter, FilterTypeUtil.TARGET,
 						new Integer(1));
 			}
 		});
 		filesAndFoldersButton.addSelectionListener(new SelectionAdapter() {
-			@Override
 			public void widgetSelected(SelectionEvent e) {
 				FilterTypeUtil.setValue(filter, FilterTypeUtil.TARGET,
 						new Integer(2));
@@ -2271,7 +2285,6 @@ class FilterEditDialog extends TrayDialog {
 		createInheritableArea(font, targetComposite);
 	}
 
-	@Override
 	protected Control createContents(Composite parent) {
 		Control control = super.createContents(parent);
 		initialize();
@@ -2287,12 +2300,15 @@ class FilterEditDialog extends TrayDialog {
 				getButton(OK).setEnabled(true);
 		}
 	}
-	@Override
+	/*
+	 * (non-Javadoc)
+	 * 
+	 * @see org.eclipse.jface.dialogs.Dialog#isResizable()
+	 */
 	protected boolean isResizable() {
 		return true;
 	}
 
-	@Override
 	protected void configureShell(Shell newShell) {
 		String title = null;
 		if (creatingNewFilter) {
@@ -2313,7 +2329,6 @@ class FilterEditDialog extends TrayDialog {
 	protected void update() {
 	}
 
-	@Override
 	protected void okPressed() {
 		// see if the initialize causes an exception
 		if (filter.hasStringArguments()) {
@@ -2369,12 +2384,12 @@ interface ICustomFilterArgumentUI {
 
 	/**
 	 * @return null if there's no issue
-	 *
+	 * 
 	 */
 	String validate();
 
 	/**
-	 *
+	 * 
 	 */
 	void selectionChanged();
 
@@ -2385,10 +2400,10 @@ interface ICustomFilterArgumentUI {
 	void create(Composite argumentComposite, Font font);
 
 	/**
-	 *
+	 * 
 	 */
 	void dispose();
-
+	
 }
 
 class MultiMatcherCustomFilterArgumentUI implements ICustomFilterArgumentUI {
@@ -2417,7 +2432,7 @@ class MultiMatcherCustomFilterArgumentUI implements ICustomFilterArgumentUI {
 	protected FilterEditDialog dialog;
 	protected Label dummyLabel1;
 	protected Label dummyLabel2;
-
+	
 	/**
 	 * @param dialog
 	 * @param parentShell
@@ -2430,12 +2445,16 @@ class MultiMatcherCustomFilterArgumentUI implements ICustomFilterArgumentUI {
 		this.filter = filter;
 	}
 
-	@Override
+	/* (non-Javadoc)
+	 * @see org.eclipse.ui.internal.ide.dialogs.ICustomFilterArgumentUI#getID()
+	 */
 	public Object getID() {
 		return FileInfoAttributesMatcher.ID;
 	}
 
-	@Override
+	/* (non-Javadoc)
+	 * @see org.eclipse.ui.internal.ide.dialogs.ICustomFilterArgumentUI#dispose()
+	 */
 	public void dispose() {
 		Widget list[] = new Widget[] {multiKey, multiOperator, multiArgumentComposite, stringArgumentComposite, stringTextArgumentComposite, arguments, argumentsLabel, argumentsCaseSensitive, argumentsRegularExpresion, attributeStringArgumentComposite, description, conditionComposite, descriptionComposite, dummyLabel1, dummyLabel2};
 		for (int i = 0; i < list.length; i++) {
@@ -2463,7 +2482,9 @@ class MultiMatcherCustomFilterArgumentUI implements ICustomFilterArgumentUI {
 		initializationComplete = false;
 	}
 
-	@Override
+	/* (non-Javadoc)
+	 * @see org.eclipse.ui.internal.ide.dialogs.ICustomFilterArgumentUI#create(org.eclipse.swt.widgets.Composite, org.eclipse.swt.graphics.Font)
+	 */
 	public void create(Composite argumentComposite, Font font) {
 		shell = argumentComposite.getShell();
 		GridLayout layout = new GridLayout();
@@ -2476,7 +2497,7 @@ class MultiMatcherCustomFilterArgumentUI implements ICustomFilterArgumentUI {
 		GridData data = new GridData(SWT.FILL, SWT.FILL, true, true);
 		argumentComposite.setLayoutData(data);
 		argumentComposite.setFont(font);
-
+		
 		conditionComposite = new Composite(argumentComposite, SWT.NONE);
 		layout = new GridLayout();
 		layout.numColumns = 2;
@@ -2489,7 +2510,7 @@ class MultiMatcherCustomFilterArgumentUI implements ICustomFilterArgumentUI {
 		conditionComposite.setLayoutData(data);
 
 		createCustomArgumentsArea(font, conditionComposite);
-
+		
 		descriptionComposite = new Composite(argumentComposite, SWT.NONE);
 		layout = new GridLayout();
 		layout.numColumns = 1;
@@ -2500,11 +2521,11 @@ class MultiMatcherCustomFilterArgumentUI implements ICustomFilterArgumentUI {
 		descriptionComposite.setFont(font);
 		data = new GridData(SWT.FILL, SWT.FILL, true, true);
 		descriptionComposite.setLayoutData(data);
-
+		
 		createDescriptionArea(font, descriptionComposite);
 		initializationComplete = true;
 	}
-
+	
 	/**
 	 * @param font
 	 * @param composite
@@ -2556,7 +2577,7 @@ class MultiMatcherCustomFilterArgumentUI implements ICustomFilterArgumentUI {
 			shell.layout(true, true);
 		}
 	}
-
+	
 	private void createCustomArgumentsArea(Font font, Composite composite) {
 		GridData data;
 
@@ -2571,20 +2592,19 @@ class MultiMatcherCustomFilterArgumentUI implements ICustomFilterArgumentUI {
 		multiArgumentComposite.setFont(font);
 		data = new GridData(SWT.FILL, SWT.FILL, true, true);
 		multiArgumentComposite.setLayoutData(data);
-
+		
 		multiKey = new Combo(multiArgumentComposite, SWT.READ_ONLY);
 		multiKey.setItems(getMultiMatcherKeys());
 		data = new GridData(SWT.LEFT, SWT.TOP, false, false);
 		multiKey.setLayoutData(data);
 		multiKey.setFont(font);
 		multiKey.addSelectionListener(new SelectionAdapter() {
-			@Override
 			public void widgetSelected(SelectionEvent e) {
 				setupMultiOperatorAndField(true);
 				storeMultiSelection();
 			}
 		});
-
+		
 		// calculate max combo width
 		ArrayList allOperators = new ArrayList();
 		String[] keys = getMultiMatcherKeys();
@@ -2602,13 +2622,12 @@ class MultiMatcherCustomFilterArgumentUI implements ICustomFilterArgumentUI {
 		multiOperator.setLayoutData(data);
 		multiOperator.setFont(font);
 		multiOperator.addSelectionListener(new SelectionAdapter() {
-			@Override
 			public void widgetSelected(SelectionEvent e) {
 				setupMultiOperatorAndField(false);
 				storeMultiSelection();
 			}
 		});
-
+		
 		FileInfoAttributesMatcher.Argument argument = FileInfoAttributesMatcher.decodeArguments((String) filter.getArguments());
 		String local = MultiMatcherLocalization.getLocalMultiMatcherKey(argument.key);
 		int index = multiKey.indexOf(local);
@@ -2616,7 +2635,7 @@ class MultiMatcherCustomFilterArgumentUI implements ICustomFilterArgumentUI {
 			multiKey.select(index);
 		else
 			multiKey.select(0);
-
+		
 		setupMultiOperatorAndField(true);
 	}
 
@@ -2635,9 +2654,9 @@ class MultiMatcherCustomFilterArgumentUI implements ICustomFilterArgumentUI {
 				multiOperator.select(0);
 		}
 		String selectedOperator = MultiMatcherLocalization.getMultiMatcherKey(multiOperator.getText());
-
+		
 		Class selectedKeyOperatorType = FileInfoAttributesMatcher.getTypeForKey(selectedKey, selectedOperator);
-
+		
 		if (intiantiatedKeyOperatorType != null) {
 			if (arguments != null) {
 				arguments.dispose();
@@ -2685,13 +2704,17 @@ class MultiMatcherCustomFilterArgumentUI implements ICustomFilterArgumentUI {
 		}
 
 		if (selectedKeyOperatorType.equals(String.class)) {
-
+	
 			arguments = new Text(multiArgumentComposite, SWT.SINGLE | SWT.BORDER);
 			GridData data= new GridData(SWT.FILL, SWT.FILL, true, false);
 			data.widthHint = 150;
 			arguments.setLayoutData(data);
 			arguments.setFont(multiArgumentComposite.getFont());
-			arguments.addModifyListener(e -> validateInputText());
+			arguments.addModifyListener(new ModifyListener() {
+				public void modifyText(ModifyEvent e) {
+					validateInputText();
+				}
+			});
 
 			dummyLabel1 = new Label(multiArgumentComposite, SWT.NONE);
 			data = new GridData(SWT.LEFT, SWT.CENTER, true, true);
@@ -2706,7 +2729,7 @@ class MultiMatcherCustomFilterArgumentUI implements ICustomFilterArgumentUI {
 			dummyLabel2.setLayoutData(data);
 
 			stringArgumentComposite = new Composite(multiArgumentComposite, SWT.NONE);
-
+			
 			GridLayout layout = new GridLayout();
 			layout.numColumns = 2;
 			layout.marginWidth = 0;
@@ -2742,9 +2765,12 @@ class MultiMatcherCustomFilterArgumentUI implements ICustomFilterArgumentUI {
 				argumentsRegularExpresion.setSelection(argument.regularExpression);
 			}
 
-			arguments.addModifyListener(e -> storeMultiSelection());
+			arguments.addModifyListener(new ModifyListener() {
+				public void modifyText(ModifyEvent e) {
+					storeMultiSelection();
+				}
+			});
 			argumentsRegularExpresion.addSelectionListener(new SelectionAdapter() {
-				@Override
 				public void widgetSelected(SelectionEvent e) {
 					setupDescriptionText(null);
 					storeMultiSelection();
@@ -2753,7 +2779,6 @@ class MultiMatcherCustomFilterArgumentUI implements ICustomFilterArgumentUI {
 				}
 			});
 			argumentsCaseSensitive.addSelectionListener(new SelectionAdapter() {
-				@Override
 				public void widgetSelected(SelectionEvent e) {
 					storeMultiSelection();
 				}
@@ -2776,7 +2801,11 @@ class MultiMatcherCustomFilterArgumentUI implements ICustomFilterArgumentUI {
 			data.widthHint = 150;
 			arguments.setLayoutData(data);
 			arguments.setFont(multiArgumentComposite.getFont());
-			arguments.addModifyListener(e -> validateInputText());
+			arguments.addModifyListener(new ModifyListener() {
+				public void modifyText(ModifyEvent e) {
+					validateInputText();
+				}
+			});
 
 			if (filter.hasStringArguments()) {
 				FileInfoAttributesMatcher.Argument argument = FileInfoAttributesMatcher.decodeArguments((String) filter.getArguments());
@@ -2785,8 +2814,12 @@ class MultiMatcherCustomFilterArgumentUI implements ICustomFilterArgumentUI {
 				else
 					arguments.setText(convertToEditableLength(argument.pattern));
 			}
-
-			arguments.addModifyListener(e -> storeMultiSelection());
+			
+			arguments.addModifyListener(new ModifyListener() {
+				public void modifyText(ModifyEvent e) {
+					storeMultiSelection();
+				}
+			});
 		}
 		if (selectedKeyOperatorType.equals(Date.class)) {
 			GridData data;
@@ -2795,7 +2828,6 @@ class MultiMatcherCustomFilterArgumentUI implements ICustomFilterArgumentUI {
 			argumentsDate.setLayoutData(data);
 			argumentsDate.setFont(multiArgumentComposite.getFont());
 			argumentsDate.addSelectionListener(new SelectionAdapter() {
-				@Override
 				public void widgetSelected(SelectionEvent e) {
 					storeMultiSelection();
 				}
@@ -2825,7 +2857,6 @@ class MultiMatcherCustomFilterArgumentUI implements ICustomFilterArgumentUI {
 			argumentsBoolean.setFont(multiArgumentComposite.getFont());
 			argumentsBoolean.setItems(new String[] {MultiMatcherLocalization.getLocalMultiMatcherKey(Boolean.TRUE.toString()), MultiMatcherLocalization.getLocalMultiMatcherKey(Boolean.FALSE.toString())});
 			argumentsBoolean.addSelectionListener(new SelectionAdapter() {
-				@Override
 				public void widgetSelected(SelectionEvent e) {
 					storeMultiSelection();
 				}
@@ -2839,7 +2870,7 @@ class MultiMatcherCustomFilterArgumentUI implements ICustomFilterArgumentUI {
 			}
 		}
 		intiantiatedKeyOperatorType = selectedKeyOperatorType;
-
+		
 		if (fContentAssistField != null)
 			fContentAssistField.setEnabled(isUsingRegularExpression);
 
@@ -2916,7 +2947,7 @@ class MultiMatcherCustomFilterArgumentUI implements ICustomFilterArgumentUI {
 		}
 		return Long.toString(value) + lengthPrefixes[lengthPrefixes.length - 1];
 	}
-
+	
 	// converts "32k" to "32768"
 	private String convertFromEditableLength(String string) throws NumberFormatException {
 		if (string.length() == 0)
@@ -2931,16 +2962,16 @@ class MultiMatcherCustomFilterArgumentUI implements ICustomFilterArgumentUI {
 		// seems equivalent to "return string", but it throws an exception if the string doesn't contain a valid number
 		return Long.toString(Long.parseLong(string));
 	}
-
+	
 	private void storeMultiSelection() {
 		if (intiantiatedKeyOperatorType != null) {
 			String selectedKey = MultiMatcherLocalization.getMultiMatcherKey(multiKey.getText());
 			String selectedOperator = MultiMatcherLocalization.getMultiMatcherKey(multiOperator.getText());
-
+	
 			FileInfoAttributesMatcher.Argument argument = new FileInfoAttributesMatcher.Argument();
 			argument.key = selectedKey;
 			argument.operator = selectedOperator;
-
+			
 			if (intiantiatedKeyOperatorType.equals(Date.class) && argumentsDate != null) {
 				Calendar calendar = Calendar.getInstance();
 				calendar.set(argumentsDate.getYear(), argumentsDate.getMonth(), argumentsDate.getDay());
@@ -2993,7 +3024,9 @@ class MultiMatcherCustomFilterArgumentUI implements ICustomFilterArgumentUI {
 		return (String []) list.toArray(new String[0]);
 	}
 
-	@Override
+	/* (non-Javadoc)
+	 * @see org.eclipse.ui.internal.ide.dialogs.ICustomFilterArgumentUI#selectionChanged()
+	 */
 	public void selectionChanged() {
 	}
 
@@ -3002,17 +3035,16 @@ class MultiMatcherCustomFilterArgumentUI implements ICustomFilterArgumentUI {
 		dialog.updateFinishControls();
 	}
 
-	@Override
 	public String validate() {
 		String message = null;
 		if (intiantiatedKeyOperatorType != null) {
 			String selectedKey = MultiMatcherLocalization.getMultiMatcherKey(multiKey.getText());
 			String selectedOperator = MultiMatcherLocalization.getMultiMatcherKey(multiOperator.getText());
-
+	
 			FileInfoAttributesMatcher.Argument argument = new FileInfoAttributesMatcher.Argument();
 			argument.key = selectedKey;
 			argument.operator = selectedOperator;
-
+			
 			if (intiantiatedKeyOperatorType.equals(Date.class) && argumentsDate != null) {
 			}
 			if (intiantiatedKeyOperatorType.equals(String.class) && arguments != null) {
@@ -3054,13 +3086,15 @@ class MultiMatcherCustomFilterArgumentUI implements ICustomFilterArgumentUI {
 				}
 			}
 			if (intiantiatedKeyOperatorType.equals(Boolean.class) && argumentsBoolean != null) {
-
+				
 			}
 		}
 		return message;
 	}
 
-	@Override
+	/* (non-Javadoc)
+	 * @see org.eclipse.ui.internal.ide.dialogs.ICustomFilterArgumentUI#formatStyledText(org.eclipse.ui.internal.ide.dialogs.FilterCopy, org.eclipse.jface.viewers.StyledString.Styler, org.eclipse.jface.viewers.StyledString.Styler)
+	 */
 	public StyledString formatStyledText(FilterCopy filter,
 			Styler fPlainStyler, Styler fBoldStyler) {
 		return new StyledString(formatMultiMatcherArgument(filter), fPlainStyler);
@@ -3069,7 +3103,7 @@ class MultiMatcherCustomFilterArgumentUI implements ICustomFilterArgumentUI {
 	private String formatMultiMatcherArgument(FilterCopy filter) {
 		String argumentString = (String) filter.getArguments();
 		FileInfoAttributesMatcher.Argument argument = FileInfoAttributesMatcher.decodeArguments(argumentString);
-
+		
 		StringBuffer builder = new StringBuffer();
 		builder.append(MultiMatcherLocalization.getLocalMultiMatcherKey(argument.key));
 		builder.append(' ');
@@ -3088,7 +3122,7 @@ class MultiMatcherCustomFilterArgumentUI implements ICustomFilterArgumentUI {
 		}
 		if (type.equals(Date.class))
 			builder.append(DateFormat.getDateInstance().format(new Date(Long.parseLong(argument.pattern))));
-
+		
 		return builder.toString();
 	}
 }
@@ -3116,12 +3150,16 @@ class DefaultCustomFilterArgumentUI implements ICustomFilterArgumentUI {
 		this.filter = filter;
 	}
 
-	@Override
+	/* (non-Javadoc)
+	 * @see org.eclipse.ui.internal.ide.dialogs.ICustomFilterArgumentUI#getID()
+	 */
 	public Object getID() {
 		return new String();
 	}
 
-	@Override
+	/* (non-Javadoc)
+	 * @see org.eclipse.ui.internal.ide.dialogs.ICustomFilterArgumentUI#dispose()
+	 */
 	public void dispose() {
 		Widget list[] = new Widget[] {arguments, argumentsLabel, description};
 		for (int i = 0; i < list.length; i++) {
@@ -3135,7 +3173,9 @@ class DefaultCustomFilterArgumentUI implements ICustomFilterArgumentUI {
 		description = null;
 	}
 
-	@Override
+	/* (non-Javadoc)
+	 * @see org.eclipse.ui.internal.ide.dialogs.ICustomFilterArgumentUI#create(org.eclipse.swt.widgets.Composite, org.eclipse.swt.graphics.Font)
+	 */
 	public void create(Composite argumentComposite, Font font) {
 		shell = argumentComposite.getShell();
 		GridLayout layout = new GridLayout();
@@ -3154,7 +3194,7 @@ class DefaultCustomFilterArgumentUI implements ICustomFilterArgumentUI {
 			fContentAssistField.setEnabled(filter.getId().equals(REGEX_FILTER_ID));
 		argumentComposite.layout(true);
 	}
-
+	
 	private void createArgumentsArea(Font font, Composite composite) {
 		GridData data;
 		argumentsLabel = addLabel(composite, NLS.bind(
@@ -3164,8 +3204,12 @@ class DefaultCustomFilterArgumentUI implements ICustomFilterArgumentUI {
 		data = new GridData(SWT.FILL, SWT.CENTER, true, false);
 		arguments.setLayoutData(data);
 		arguments.setFont(font);
-		arguments.addModifyListener(e -> FilterTypeUtil.setValue(filter, FilterTypeUtil.ARGUMENTS,
-				arguments.getText()));
+		arguments.addModifyListener(new ModifyListener() {
+			public void modifyText(ModifyEvent e) {
+				FilterTypeUtil.setValue(filter, FilterTypeUtil.ARGUMENTS,
+						arguments.getText());
+			}
+		});
 		if (filter.hasStringArguments())
 			arguments.setText((String) FilterTypeUtil.getValue(filter,
 					FilterTypeUtil.ARGUMENTS));
@@ -3203,7 +3247,9 @@ class DefaultCustomFilterArgumentUI implements ICustomFilterArgumentUI {
 		return label;
 	}
 
-	@Override
+	/* (non-Javadoc)
+	 * @see org.eclipse.ui.internal.ide.dialogs.ICustomFilterArgumentUI#selectionChanged()
+	 */
 	public void selectionChanged() {
 		if (arguments != null)
 			arguments.setEnabled(filter.hasStringArguments());
@@ -3231,12 +3277,13 @@ class DefaultCustomFilterArgumentUI implements ICustomFilterArgumentUI {
 		description.setFont(font);
 	}
 
-	@Override
 	public String validate(){
 		return null;
 	}
 
-	@Override
+	/* (non-Javadoc)
+	 * @see org.eclipse.ui.internal.ide.dialogs.ICustomFilterArgumentUI#formatStyledText(org.eclipse.ui.internal.ide.dialogs.FilterCopy, org.eclipse.jface.viewers.StyledString.Styler, org.eclipse.jface.viewers.StyledString.Styler)
+	 */
 	public StyledString formatStyledText(FilterCopy filter,
 			Styler fPlainStyler, Styler fBoldStyler) {
 		return new StyledString(filter.getArguments() != null ? filter
@@ -3245,7 +3292,7 @@ class DefaultCustomFilterArgumentUI implements ICustomFilterArgumentUI {
 }
 
 class MultiMatcherLocalization {
-
+	
 	static String[][] multiMatcherKey = {
 			{FileInfoAttributesMatcher.KEY_NAME, IDEWorkbenchMessages.ResourceFilterPage_multiKeyName},
 			{FileInfoAttributesMatcher.KEY_PROPJECT_RELATIVE_PATH, IDEWorkbenchMessages.ResourceFilterPage_multiKeyProjectRelativePath},
@@ -3265,7 +3312,7 @@ class MultiMatcherLocalization {
 			{Boolean.TRUE.toString(), IDEWorkbenchMessages.ResourceFilterPage_true},
 			{Boolean.FALSE.toString(), IDEWorkbenchMessages.ResourceFilterPage_false}
 	};
-
+	
 	static public String getLocalMultiMatcherKey(String key) {
 		for (int i = 0; i < multiMatcherKey.length; i++) {
 			if (multiMatcherKey[i][0].equals(key))
@@ -3273,7 +3320,7 @@ class MultiMatcherLocalization {
 		}
 		return null;
 	}
-
+	
 	static public String getMultiMatcherKey(String local) {
 		for (int i = 0; i < multiMatcherKey.length; i++) {
 			if (multiMatcherKey[i][1].equals(local))
